# General-Agentic-Memory

./: .cleanup_plan.md  .gitignore  README.md  README_CN.md  cleanup.py  pyproject.toml  requirements.txt  requiremets.txt  setup.py
.agent/: IMPLEMENTATION_PLAN.md
backend/: main.py  migrate_to_hybrid.py  test.py
backend/api/: chat.py  documents.py  memory.py
backend/core/: config.py  gam_manager.py
backend/index/dense/: doc_emb.npy
backend/schemas/: chat.py
backend/storage/: chunk_db.py  chunks.db  db_page_store.py
backend/storage/index/dense/: doc_emb.npy
backend/utils/: file_extractor.py  graph_builder.py
eval/: evalution_hotpotqa.py  evalution_locomo.py  evalution_narrativeqa.py  evalution_ruler.py
eval/datasets/: base.py
examples/hotpotqa/: hotpotqa.py
examples/locomo/: locomoqa.py
examples/longbenchv2/: longbenchqa.py
examples/longcodebench/: longcodebenchqa.py
examples/quickstart/: basic_usage.py
frontend/: COMPONENT_STRUCTURE.md
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatArea.jsx  FileHistoryPanel.jsx  InputSection.jsx  KnowledgeGraph.jsx  MessageList.jsx  RetrievalDetails.jsx  SidePanel.css  SidePanel.jsx  SourceCard.jsx  ThinkingSteps.jsx  TransparentAIAgentUI.css  TransparentAIAgentUI.jsx  UploadState.jsx
gam/: __init__.py
gam/agents/: memory_agent.py  research_agent.py
gam/config/: retriever.py
gam/generator/: vllm_generator.py
gam/prompts/: research_prompts.py
gam/retriever/: bm25.py  dense_retriever.py
gam/schemas/: __init__.py  page.py  result.py
scripts/: verify_batch_memory.py  verify_retrieval.py
